@@ -715,12 +715,22 @@ if test "$config_rt_exceptions" = "yes"; then
   AC_DEFINE_UNQUOTED(CONFIG_RT_EXCEPTIONS, 1, [Define to 1 to allow exceptions in the realtime context.])
 fi
 
+case "$host" in
+    *-*-darwin*)
+        config_pthread_testcancel=yes
+        ;;
+    *)
+        config_pthread_testcancel=no
+        ;;
+esac
+
 AC_ARG_ENABLE(pthread-testcancel,
   [  --enable-pthread-testcancel
-                          Enable pthread_testcancel() calls and avoid asynchronous
-                          cancel of pthreads (default=no).],
+                          Enable pthread_testcancel() calls and avoid
+                          asynchronous cancel of pthreads (default=yes
+                          for Mac targets, no otherwise).],
   [config_pthread_testcancel="$enableval"],
-  [config_pthread_testcancel="no"]
+  []
 )
 if test "$config_pthread_testcancel" = "yes"; then
   AC_DEFINE_UNQUOTED(CONFIG_PTHREAD_TESTCANCEL, 1, [Define to 1 to enable pthread_testcancel() calls.])
